welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:4: error: not found: type i
    if (nums[i] == lookingFor) {position = i}
             ^indexOfValue:4: error: value nums of type Array[Int] does not take type parameters.
    if (nums[i] == lookingFor) {position = i}
            ^