welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
  var position:Int = -1
  for (i <- 0 to nums.length-1) {
    if (nums[i] == lookingFor) {position = i}
  }
  return position
}